redesign the app

--- a/src/pages/contact-us/contact-us.html
+++ b/src/pages/contact-us/contact-us.html
@@ -5,12 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-      <button ion-button menuToggle>
-          <ion-icon name="menu"></ion-icon>
+    <ion-navbar color="hu">
+        <button ion-button menuToggle>
+          <ion-icon name="menu" class="btn-w"></ion-icon>
         </button>
-    <ion-title>اتصل بنا</ion-title>
+    <ion-title class="g-font">اتصل بنا</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -20,7 +19,7 @@
   <ion-item>
     <!-- <ion-card class="circle" > -->
         <!-- <ion-avatar item-start> -->
-              <img src="../../assets/imgs/contactus.jpg" alt=""  class="imgContactus" />
+              <img src="../../assets/imgs/mail.svg" alt=""  class="imgContactus" />
           <!-- </ion-avatar> -->
       
     <!-- </ion-card> -->
@@ -48,7 +47,7 @@
   </ion-item>
   <ion-item>
       <!-- <ion-card class="circle" > -->
-          <img src="../../assets/imgs/aboutus.jpg" alt="" class="imgContactus"/>
+          <img src="../../assets/imgs/question.svg" alt="" class="imgContactus"/>
       <!-- </ion-card> -->
       <ion-item text-wrap>
           <h6>
