fix image issue

--- a/src/pages/contact-us/contact-us.html
+++ b/src/pages/contact-us/contact-us.html
@@ -19,7 +19,7 @@
   <ion-item>
     <!-- <ion-card class="circle" > -->
         <!-- <ion-avatar item-start> -->
-              <img src="../../assets/imgs/mail.svg" alt=""  class="imgContactus" />
+              <img src="./assets/imgs/mail.svg" alt=""  class="imgContactus" />
           <!-- </ion-avatar> -->
       
     <!-- </ion-card> -->
@@ -47,7 +47,7 @@
   </ion-item>
   <ion-item>
       <!-- <ion-card class="circle" > -->
-          <img src="../../assets/imgs/question.svg" alt="" class="imgContactus"/>
+          <img src="./assets/imgs/question.svg" alt="" class="imgContactus"/>
       <!-- </ion-card> -->
       <ion-item text-wrap>
           <h6>
@@ -62,7 +62,7 @@
       <ion-item text-wrap class="cardProg">
           <ion-avatar item-start>
               <a href="http://codeforiraq.herokuapp.com/">
-                <img src="../../assets/imgs/LogoCFI.png" alt="" />
+                <img src="./assets/imgs/LogoCFI.png" alt="" />
               </a>
             </ion-avatar>
             <h6>info@codeforiraq.org</h6>
