--- a/src/pages/initial/initial.html
+++ b/src/pages/initial/initial.html
@@ -13,7 +13,7 @@
 </ion-header>
 <ion-content class="bgInitPage">
       <ion-card class="st-card">
-        <img src="../../assets/imgs/im-human.jpg" style="
+        <img src="./assets/imgs/im-human.jpg" style="
         width: 90%;
         margin-right: 5%;
     ">        <ion-card-content>
