redesign about page

--- a/src/pages/about-us/about-us.html
+++ b/src/pages/about-us/about-us.html
@@ -63,20 +63,10 @@
               </ion-card>
               <!-- ..... -->     
                 <!-- ..... -->
-                <ion-card>
-                  <ion-item>
-                    <ion-avatar item-start>
-                      <img src="./assets/imgs/programmer.png">
-                    </ion-avatar>
-                    <h2>المبرمجين</h2>
-                    <small class="mu">info@codeforiraq.org</small>
-                  </ion-item>
-                  <ion-card-content>
-                    <p>front-end | Zena Hasan</p><br>
-                    <p> Back-end | Fatima Amer</p><br>
-                    <p>Mobile Application | Rana Abdullah.</p>   
-                  </ion-card-content> 
-                </ion-card>
+                <button ion-item  (click)="developerModal()">
+                  مطورين التطبيق
+                  <ion-icon name='code-working' item-start></ion-icon>
+                </button>
   
         
       </ion-card>
