showing date and time

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -39,7 +39,7 @@
         <ion-col>
           <button ion-button icon-left clear small>
               <ion-icon ios="md-calendar" md="md-calendar" large></ion-icon>
-            <div><span class="styleType"> تأريخ :</span> {{needer.sendDate}} </div>
+            <div><span class="styleType"> تأريخ :</span> {{needer.time}} </div>
           </button>
         </ion-col>
         <ion-col>
