--- a/src/pages/hum-state-rep/hum-state-rep.html
+++ b/src/pages/hum-state-rep/hum-state-rep.html
@@ -50,7 +50,7 @@
         value="{{fileToUpload}}" file-model="fileToUpload"
         set-file-data="fileToUpload = value;" 
         type="file" id="my_file" class="inputfile" />
-        <label for="my_file"><ion-icon ios="ios-image" md="md-image"style="padding-left:5px;"></ion-icon>
+        <label for="my_file" style="width:60%"><ion-icon ios="ios-image" md="md-image"style="padding-left:15px;"></ion-icon>
           اضافة صورة</label>
     
 
