Update Login 1. Make register page for login & new register 2. Update update profile page ot display current data 3. create user service to store and get user data 4. update firebase rules 	modified:   src/app/app.component.ts 	modified:   src/app/app.module.ts 	modified:   src/pages/logout/logout.ts 	modified:   src/pages/register/register.html 	modified:   src/pages/register/register.ts 	modified:   src/pages/update-profile/update-profile.html 	modified:   src/pages/update-profile/update-profile.ts 	new file:   src/providers/services-user/services-user.ts 	new file:   src/providers/user/user.ts

--- a/src/pages/update-profile/update-profile.html
+++ b/src/pages/update-profile/update-profile.html
@@ -13,21 +13,21 @@
   </ion-header>
 
 <ion-content padding>
-    <ion-list no-lines>
-        <ion-item>
-            <ion-label floating>الاسم الكامل</ion-label>
-            <ion-input #name type="text"></ion-input>
-          </ion-item>
-          <ion-item>
-              <ion-label floating>العنوان</ion-label>
-              <ion-input #address type="text"></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-label floating>الوظيفة</ion-label>
-                <ion-input #job type="text"></ion-input>
-              </ion-item>
-              <ion-item>
-                  <button (click)="updateProfile(name, address, job)" ion-button full>تحديث</button>
-              </ion-item>
-              </ion-list>
+  <ion-list no-lines>
+    <ion-item>
+      <ion-label floating>الاسم الكامل</ion-label>
+      <ion-input #name type="text" [value]="userService.user.fullName" ></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>العنوان</ion-label>
+      <ion-input #address type="text" [value]="userService.user.address"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label floating>الوظيفة</ion-label>
+      <ion-input #job type="text" [value]="userService.user.job"></ion-input>
+    </ion-item>
+    <ion-item>
+      <button (click)="updateProfile(name, address, job)" ion-button full>تحديث</button>
+    </ion-item>
+  </ion-list>
 </ion-content>
