Change the structure of database 	modified:   src/pages/home/home.html 	modified:   src/pages/home/home.ts 	modified:   src/pages/hum-state-rep/hum-state-rep.ts

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <ion-card *ngFor="let needer of needers">
+  <ion-card *ngFor="let needer of needers | async">
       <ion-row>
           <div class="styleType" style="padding-top: 10px;
           padding-bottom: 10px"><span>نوع الحالة :
