--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta name="msapplication-tap-highlight" content="no">
   <link href='http://fonts.googleapis.com/earlyaccess/droidarabickufi.css' rel='stylesheet' type='text/css'>  
 
+
+  <!-- <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css"  media="screen,projection"/> -->
+
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
@@ -27,9 +30,12 @@
         .catch(err => console.error('Error', err));
     }
   </script>-->
+  <!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.css"> -->
+  
   <link href="assets/css/animate.css" rel="stylesheet">
   
   <link href="build/main.css" rel="stylesheet">
+  
 
 </head>
 <body>
@@ -46,6 +52,7 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+  <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 
 </body>
 </html>
