--- a/src/pages/hum-state-rep/hum-state-rep.html
+++ b/src/pages/hum-state-rep/hum-state-rep.html
@@ -33,24 +33,24 @@
   <ion-item>
     <ion-label>المحافظة</ion-label>
     <ion-select #city   (change)="selectItem($event)">
-      <ion-option value="Erbil">اربيل</ion-option>
-      <ion-option value="Al_Anbar">الانبار</ion-option>
-      <ion-option value="Babil">بابل</ion-option>
-      <ion-option value="Basra">البصرة</ion-option>
-      <ion-option value="Baghdad">بغداد</ion-option>
-      <ion-option value="Dohuk">دهوك</ion-option>
-      <ion-option value="Diyala">ديالى</ion-option>
-      <ion-option value="Sulaymaniyah">السليمانيه</ion-option>
-      <ion-option value="Saladin">صلاح الدين</ion-option>
-      <ion-option value="Al-Qādisiyyah">القادسية</ion-option>
-      <ion-option value="Karbala">كربلاء</ion-option>
-      <ion-option value="Kirkuk">كركوك</ion-option>
-      <ion-option value="Muthanna">المثنى</ion-option>
-      <ion-option value="Maysan">ميسان</ion-option>
-      <ion-option value="Dhi_Qar">الناصرية</ion-option>
-      <ion-option value="Najaf">النجف</ion-option>
-      <ion-option value="Nineveh">نينوى</ion-option>
-      <ion-option value="Wasit">واسط</ion-option>
+      <ion-option value="اربيل">اربيل</ion-option>
+      <ion-option value="الانبار">الانبار</ion-option>
+      <ion-option value="بابل">بابل</ion-option>
+      <ion-option value="البصرة">البصرة</ion-option>
+      <ion-option value="بغداد">بغداد</ion-option>
+      <ion-option value="دهوك">دهوك</ion-option>
+      <ion-option value="ديالى">ديالى</ion-option>
+      <ion-option value="السليمانيه">السليمانيه</ion-option>
+      <ion-option value="صلاح الدين">صلاح الدين</ion-option>
+      <ion-option value="القادسية">القادسية</ion-option>
+      <ion-option value="كربلاء">كربلاء</ion-option>
+      <ion-option value="كركوك">كركوك</ion-option>
+      <ion-option value="المثنى">المثنى</ion-option>
+      <ion-option value="ميسان">ميسان</ion-option>
+      <ion-option value="الناصرية">الناصرية</ion-option>
+      <ion-option value="النجف">النجف</ion-option>
+      <ion-option value="نينوى">نينوى</ion-option>
+      <ion-option value="واسط">واسط</ion-option>
     </ion-select>
 
   </ion-item>
