--- a/src/pages/initial/initial.html
+++ b/src/pages/initial/initial.html
@@ -13,9 +13,9 @@
 </ion-header>
 <ion-content class="bgInitPage">
       <ion-card class="st-card">
-        <img src="./assets/imgs/im-human.jpg" style="
-        width: 90%;
-        margin-right: 5%;
+        <img src="../../assets/imgs/logoApp.png" style="
+        width: 80%;
+        margin-right: 10%;
     ">        <ion-card-content>
           <ion-card-title color="hu">
             تطبيق انا انسان!
